# r0zygisk

./: CHANGELOG.md  R0ZYGISK_V2_DIFF_FROM_V1.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.1.md  build.gradle.kts  适配apatch.md
.github/workflows/: ci.yml
loader/: build.gradle.kts
loader/src/: CMakeLists.txt
loader/src/common/: daemon.cpp
loader/src/include/: daemon.h  native_bridge_callbacks.h
loader/src/injector/: entry.cpp  hook.cpp  module.hpp  unmount.cpp  zygisk.hpp
loader/src/native_bridge/: loader.cpp  payload.cpp
loader/src/ptracer/: main.cpp  monitor.cpp  ptracer.cpp
module/: build.gradle.kts
module/src/: customize.sh  post-fs-data.sh  r0z-ctl.sh  service.sh
module/src/webroot/: app.js  index.html  styles.css
zygiskd/src/: constants.rs  hide_list.rs  main.rs  r0zd.rs
zygiskd/src/root_impl/: apatch.rs  magisk.rs  mod.rs
